[package]
name = "rust_crypto_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
dotenv = "0.15.0"
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = "0.33"
thousands = "0.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
